Now flashes with a delay.

--- a/.gitignore
+++ b/.gitignore
@@ -348,8 +348,12 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
-FlashLedDelay/cbe.err
-stm8discovery.stw
-stm8discovery.wed
-FlashLedDelay/checkres.spy
-FlashLedTimer/cbe.err
+
+# stm8 visual devlop files
+**/*.stw
+**/*.wed
+**/checkres.spy
+**/cbe.err
+**/*.wdb
+**/TAGS_Filelist.txt
+**/TAGS.txt
